# oirpy

./: Readme.md  setup.cfg  setup.py
oirpy/: oirreader.py
src/oirpy/: __init__.py  napari_oir_reader.py  oirreader.py
