[metadata]
name = oirpy

author = Guillaume Witz
author_email = guillaume.witz@unibe.ch

license = BSD-3-Clause
description = oirpy import
long_description = file: Readme.md
long_description_content_type = text/markdown
include_package_data = True
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    numpy

[options.packages.find]
where = src

#[options.package_data]
#oirpy = 
#    napari.yaml

[options.entry_points] 
#for future use with npe2
#napari.manifest = 
#    oirpy = oirpy:napari.yml
napari.plugin = 
    oirpy = oirpy